# backend/docs/swagger.json
@@ -5918,6 +5918,17 @@
                     "user"
                 ],
                 "summary": "发送邮箱验证码",
+                "parameters": [
+                    {
+                        "description": "目标邮箱",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.sendEmailCodeRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "发送成功",
@@ -5927,6 +5938,12 @@
                     },
                     "400": {
                         "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/response.Any"
+                        }
+                    },
+                    "500": {
+                        "description": "发送失败",
                         "schema": {
                             "$ref": "#/definitions/response.Any"
                         }
@@ -8036,6 +8053,17 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.sendEmailCodeRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
                     "type": "string"
                 }
             }
